--- a/WebAppGraphAPI/Views/Users/Delete.cshtml
+++ b/WebAppGraphAPI/Views/Users/Delete.cshtml
@@ -29,3 +29,7 @@
         @Html.ActionLink("Back to List", "Index")
     </p>
 }
+@if (ViewBag.ErrorMessage == "AuthorizationRequired")
+{
+    <p>You have to sign-in. Click @Html.ActionLink("here", "Delete", "Users", new { reauth = true }, null) to sign-in.</p>
+}
