--- a/WebAppGraphAPI/Views/Users/Details.cshtml
+++ b/WebAppGraphAPI/Views/Users/Details.cshtml
@@ -346,3 +346,7 @@
     </p>
 </body>
 </html>
+@if (ViewBag.ErrorMessage == "AuthorizationRequired")
+{
+    <p>You have to sign-in. Click @Html.ActionLink("here", "Details", "Users", new { reauth = true }, null) to sign-in.</p>
+}
