--- a/WebAppGraphAPI/Views/Users/Edit.cshtml
+++ b/WebAppGraphAPI/Views/Users/Edit.cshtml
@@ -119,3 +119,8 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+@if (ViewBag.ErrorMessage == "AuthorizationRequired")
+{
+    <p>You have to sign-in. Click @Html.ActionLink("here", "Edit", "Users", new { reauth = true }, null) to sign-in.</p>
+}
