--- a/WebAppGraphAPI/Views/Users/GetGroups.cshtml
+++ b/WebAppGraphAPI/Views/Users/GetGroups.cshtml
@@ -22,3 +22,7 @@
         </tr>
     }
 </table>
+@if (ViewBag.ErrorMessage == "AuthorizationRequired")
+{
+    <p>You have to sign-in. Click @Html.ActionLink("here", "GetGroups", "Users", new { reauth = true }, null) to sign-in.</p>
+}
