--- a/WebAppGraphAPI/Views/Users/Index.cshtml
+++ b/WebAppGraphAPI/Views/Users/Index.cshtml
@@ -5,7 +5,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table id="directoryObjects">
+<table id="directoryObjects" class="table table-bordered table-striped">
     <tr>
         <th>
             UserPrincipalName
@@ -19,7 +19,7 @@
         <th>
             ObjectId
         </th>
-        <th/>
+        <th />
     </tr>
     @foreach (var item in Model)
     {
@@ -38,11 +38,17 @@
                 @Html.DisplayFor(modelItem => user.ObjectId)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { objectId=item.ObjectId }) <br/>
-                @Html.ActionLink("Details", "Details", new { objectId=item.ObjectId }) <br/>
-                @Html.ActionLink("Delete", "Delete", new { objectId=item.ObjectId })  <br/>
-                @Html.ActionLink("Get Groups", "GetGroups", new { objectId=item.ObjectId }) 
+                @Html.ActionLink("Edit", "Edit", new { objectId = item.ObjectId }) <br />
+                @Html.ActionLink("Details", "Details", new { objectId = item.ObjectId }) <br />
+                @Html.ActionLink("Delete", "Delete", new { objectId = item.ObjectId })  <br />
+                @Html.ActionLink("Get Groups", "GetGroups", new { objectId = item.ObjectId })
             </td>
         </tr>
     }
 </table>
+
+@if (ViewBag.ErrorMessage == "AuthorizationRequired")
+{
+    <p>You have to sign-in to see Users. Click @Html.ActionLink("here", "Index", "Users", new { reauth = true }, null) to sign-in.</p>
+}
+
