--- a/WebAppGraphAPI/Views/Users/Index.cshtml
+++ b/WebAppGraphAPI/Views/Users/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.Azure.ActiveDirectory.GraphClient
-@model IEnumerable<DirectoryObject> 
+@model IEnumerable<User> 
 
 <h2>/Users</h2>
 <p>
@@ -41,7 +41,7 @@
                 @Html.ActionLink("Edit", "Edit", new { objectId = item.ObjectId }) <br />
                 @Html.ActionLink("Details", "Details", new { objectId = item.ObjectId }) <br />
                 @Html.ActionLink("Delete", "Delete", new { objectId = item.ObjectId })  <br />
-                @Html.ActionLink("Get Groups", "GetGroups", new { objectId = item.ObjectId })
+                @Html.ActionLink("GroupMembership", "GetGroups", new { objectId = item.ObjectId })
             </td>
         </tr>
     }
