Add Group List View and Group Delete
New view lists all the groups similar to how the userlist view works. Only
action implemented for groups right now is delete.

--- a/WebAppGraphAPI/Views/Shared/_Layout.cshtml
+++ b/WebAppGraphAPI/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Profile", "Index", "UserProfile")</li>
                     <li>@Html.ActionLink("UserList", "Index", "Users")</li>
+                    <li>@Html.ActionLink("GroupList", "Index", "Groups")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
