Add Contact Graph Samples
Includes listing, viewing the details of the object and what groups
contacts are in. Additonally, a couple of small layout fixes are included
for groups and contacts

--- a/WebAppGraphAPI/Views/Shared/_Layout.cshtml
+++ b/WebAppGraphAPI/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Profile", "Index", "UserProfile")</li>
                     <li>@Html.ActionLink("UserList", "Index", "Users")</li>
                     <li>@Html.ActionLink("GroupList", "Index", "Groups")</li>
+                    <li>@Html.ActionLink("ContactList", "Index", "Contacts")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
