--- a/WebAppGraphAPI/Views/Groups/Index.cshtml
+++ b/WebAppGraphAPI/Views/Groups/Index.cshtml
@@ -47,8 +47,8 @@
                 @Html.ActionLink("Edit", "Edit", new { objectId = item.ObjectId }) <br />
                 @Html.ActionLink("Details", "Details", new { objectId = item.ObjectId }) <br />
                 @Html.ActionLink("Delete", "Delete", new { objectId = item.ObjectId })  <br />
-                @Html.ActionLink("Members", "GetMembers", new { objectId = item.ObjectId })
-                @Html.ActionLink("Group Membership", "GetGroups", new { objectId = item.ObjectId }) <br />
+                @Html.ActionLink("Members", "GetMembers", new { objectId = item.ObjectId }) <br />
+                @Html.ActionLink("GroupMembership", "GetGroups", new { objectId = item.ObjectId }) <br />
             </td>
         </tr>
     }
