--- a/WebAppGraphAPI/Views/Users/Index.cshtml
+++ b/WebAppGraphAPI/Views/Users/Index.cshtml
@@ -47,7 +47,7 @@
                 @Html.ActionLink("Edit", "Edit", new { objectId = item.ObjectId }) <br />
                 @Html.ActionLink("Details", "Details", new { objectId = item.ObjectId }) <br />
                 @Html.ActionLink("Delete", "Delete", new { objectId = item.ObjectId })  <br />
-                @Html.ActionLink("GroupMembership", "GetGroups", new { objectId = item.ObjectId })
+                @Html.ActionLink("GroupMembership", "GetGroups", new { objectId = item.ObjectId }) <br />
                 @Html.ActionLink("DirectReports", "GetDirectReports", new { objectId = item.ObjectId}) <br />
             </td>
         </tr>
