Add Roles features to the sample.
Only supporting listing roles, not adding users to a role. Also some other
UI cleanup included

--- a/WebAppGraphAPI/Views/Contacts/Details.cshtml
+++ b/WebAppGraphAPI/Views/Contacts/Details.cshtml
@@ -1,12 +1,12 @@
 ﻿@using Microsoft.Azure.ActiveDirectory.GraphClient
 @model Contact
 
-<h2>/Users/@Model.DisplayName</h2>
+<h2>/Contacts/@Model.DisplayName</h2>
 <!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>User</title>
+    <title>Contact</title>
 </head>
 <body>
     <fieldset>
