--- a/WebAppGraphAPI/Views/Shared/_Layout.cshtml
+++ b/WebAppGraphAPI/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("UserList", "Index", "Users")</li>
                     <li>@Html.ActionLink("GroupList", "Index", "Groups")</li>
                     <li>@Html.ActionLink("ContactList", "Index", "Contacts")</li>
+                    <li>@Html.ActionLink("RoleList", "Index", "Roles")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
