Add thumbnail photos for users
Details now features thumbnail photos and you can upload one from the user
edit page.

--- a/WebAppGraphAPI/Views/Users/Details.cshtml
+++ b/WebAppGraphAPI/Views/Users/Details.cshtml
@@ -11,6 +11,9 @@
 <body>
     <fieldset>
         <legend>User</legend>
+        
+        <b>Thumbnail Photo: </b>  <img src='@Url.Action( "ShowThumbnail", "Users", new { id = Model.ObjectId } )' alt="No Image Exists"/>
+
         <table id="directoryObjects">
             <tr>
                 <td>
