Fixed issue with Thumbnail photo
Thumbnail photo issue was fixed

--- a/WebAppGraphAPI/Views/Users/Index.cshtml
+++ b/WebAppGraphAPI/Views/Users/Index.cshtml
@@ -19,6 +19,9 @@
         <th>
             ObjectId
         </th>
+        <th>
+            Manager
+        </th>
         <th />
     </tr>
     @foreach (var item in Model)
@@ -36,6 +39,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => user.ObjectId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => user.Manager)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { objectId = item.ObjectId }) <br />
