further updates to README and cleanup

--- a/WebAppGraphAPI/Views/Users/Edit.cshtml
+++ b/WebAppGraphAPI/Views/Users/Edit.cshtml
@@ -1,6 +1,4 @@
-﻿@using Microsoft.Azure.ActiveDirectory.GraphClient
-@using WebAppGraphAPI.Controllers
-@model Microsoft.Azure.ActiveDirectory.GraphClient.User
+﻿@model Microsoft.Azure.ActiveDirectory.GraphClient.User
 
 @{
     ViewBag.Title = "Edit User";
